[FIX] Resolved PR issues