@@ -1,12 +1,9 @@
 package ro.unibuc.hello.utils;
 
-import org.springframework.http.ResponseEntity;
-import ro.unibuc.hello.dto.ErrorString;
+import ro.unibuc.hello.exception.ValidationException;
 
 import java.util.function.Consumer;
 import java.util.regex.Pattern;
-
-import static ro.unibuc.hello.utils.ResponseUtils.badRequest;
 
 public class ValidationUtils {
     private static final String missingFieldTemplate = "%s is required";
@@ -28,67 +25,55 @@ public class ValidationUtils {
         }
     }
 
-    public static ResponseEntity<ErrorString> exists(String fieldName, String value) {
-        return value == null
-                ? badRequest(missingFieldTemplate, fieldName)
-                : null;
+    public static void exists(String fieldName, String value) {
+        if (value == null) {
+            throw new ValidationException(missingFieldTemplate, fieldName);
+        }
     }
 
     public static <T> T fallback(T value, T defaultValue) {
         return value == null ? defaultValue : value;
     }
 
-    public static <T> ResponseEntity<ErrorString> validate(String fieldName, T field) {
-        ResponseEntity<ErrorString> error;
-
-        switch (field) {
-            case null -> error = null;
-            case String s when s.isBlank() -> error = badRequest(emptyFieldTemplate, fieldName);
-            case Integer i when i < 0 -> error = badRequest(negativeFieldTemplate, fieldName);
-            case Double v when v < 0 -> error = badRequest(negativeFieldTemplate, fieldName);
-            default -> error = null;
-        };
-
-        return error;
+    public static <T> void validate(String fieldName, T field) {
+        if (field instanceof String s && s.trim().isEmpty()) {
+            throw new ValidationException(emptyFieldTemplate, fieldName);
+        }
+        if (field instanceof Integer i && i < 0) {
+            throw new ValidationException(negativeFieldTemplate, fieldName);
+        }
+        if (field instanceof Double v && v < 0) {
+            throw new ValidationException(negativeFieldTemplate, fieldName);
+        }
     }
 
-    public static <T> ResponseEntity<ErrorString> validate(String fieldName, T field, ValidationRule<T> validator) {
+    public static <T> void validate(String fieldName, T field, ValidationRule<T> validator) {
         if (field == null) {
-            return null;
+            return;
         }
         String errorMessage = validator.validate(field);
         if (errorMessage != null) {
-            return badRequest(errorMessage, fieldName);
+            throw new ValidationException(errorMessage, fieldName);
         }
-        return null;
     }
 
-    public static <R> ResponseEntity<ErrorString> validateAndUpdate(String fieldName, Consumer<R> setter, R fieldValue, ValidationRule<R> validator) {
-        ResponseEntity<ErrorString> err = validator == null
-                ? validate(fieldName, fieldValue)
-                : validate(fieldName, fieldValue, validator);
+    public static <R> void validateAndUpdate(String fieldName, Consumer<R> setter, R fieldValue, ValidationRule<R> validator) {
+        if (validator == null) {
+            validate(fieldName, fieldValue);
+        }
+        else {
+            validate(fieldName, fieldValue, validator);
+        }
 
-        if (err != null) return err;
         if (fieldValue != null) setter.accept(fieldValue);
-        return null;
     }
 
-    public static <R> ResponseEntity<ErrorString> validateAndUpdate(String fieldName, Consumer<R> setter, R fieldValue) {
-        return validateAndUpdate(fieldName, setter, fieldValue, null);
-    }
-
-    @SuppressWarnings("unchecked")
-    public static ResponseEntity<ErrorString> chain(ResponseEntity<ErrorString>... responses) {
-        for (ResponseEntity<ErrorString> response : responses) {
-            if (response != null) {
-                return response;
-            }
-        }
-        return null;
+    public static <R> void validateAndUpdate(String fieldName, Consumer<R> setter, R fieldValue) {
+        validateAndUpdate(fieldName, setter, fieldValue, null);
     }
 
     private static boolean failsRegex(String regex, String value) {
-        return !Pattern.compile(regex).matcher(value).matches();
+        return !Pattern.compile(regex).matcher(value).find();
     }
 
     public static ValidationRule<String> validLength(int min) {
